[package]
name = "tavern-database"
version = "0.0.0"
authors = ["Chutian Yang <yct21@12tcy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
