[package]
name = "tavern-tbt"
version = "0.0.0"
authors = ["Chutian Yang <yct21@12tcy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tbt"
path = "src/main.rs"

[dependencies]
tavern-database = { path = "../../database" }
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
